[Critical] 1.16.5 Base Content
Notes:
- SmarterOpenDoors Task non-functional --- Removed
- PlayerSaveData#getIfPresent removed as non-functional
- EntityRelationship#getRelationshipStream removed as non-functional (Even with OptionalCompat) -- Only means offline players do not get considered, which was 1.16.5 behavior anyways so meh.
- TaskUtils#getSpawnSafeTopLevel retains its 1.18.x improvements, but bottomY is locked to 0
- Rose Gold Dust Recipies Removed in vanilla usage -- Modpacks are free to reimplement both with supplemental materials, but vanilla does not contain that
- Moved Block/Item Registration to after Entities to prevent an error when registering the Spawn Egg Items